--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -29,17 +29,27 @@
     <body>
         <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
             <div class="container">
-                <div class="navbar-header">
+                <div class="navbar-header_">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="<?php echo $this->url('home') ?>"><img src="<?php echo $this->basePath('img/zf2-logo.png') ?>" alt="Zend Framework 2"/>&nbsp;<?php echo $this->translate('Skeleton Application') ?></a>
+                    <!--a class="navbar-brand" href="<?php echo $this->url('home') ?>"><img src="<?php echo $this->basePath('img/zf2-logo.png') ?>" alt="Zend Framework 2"/>&nbsp;<?php echo $this->translate('Skeleton Application') ?></a-->
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="<?php echo $this->url('home') ?>"><?php echo $this->translate('Home') ?></a></li>
+                        <!--li class="active"><a href="<?php echo $this->url('home') ?>"><?php echo $this->translate('Home') ?></a></li-->                        
+                        <li class="active"><a href="<?php echo $this->url('album') ?>"><?php echo $this->translate('Конграгенты') ?></a></li>
+                        <li class="active"><a href="<?php echo $this->url('album') ?>"><?php echo $this->translate('Закупки') ?></a></li>
+                        <li class="active"><a href="<?php echo $this->url('album') ?>"><?php echo $this->translate('БДДС') ?></a></li>
+                        <li class="active"><a href="<?php echo $this->url('album') ?>"><?php echo $this->translate('ТМЦ') ?></a></li>
+                        <li class="active"><a href="<?php echo $this->url('album') ?>"><?php echo $this->translate('Документы в работе') ?></a></li>
+                        <li class="active"><a href="<?php echo $this->url('album') ?>"><?php echo $this->translate('Программное обеспечение') ?></a></li>
+                        <li class="active"><a href="<?php echo $this->url('reports') ?>"><?php echo $this->translate('Отчеты') ?></a></li>
+                        <li class="active"><a href="<?php echo $this->url('reports') ?>"><?php echo $this->translate('Администрирование') ?></a></li>
+                        
+                        
                     </ul>
                 </div><!--/.nav-collapse -->
             </div>
@@ -48,7 +58,7 @@
     	    <?php echo $this->content; ?>
         	<hr>
         	<footer>
-        	     <p>&copy; 2005 - <?php echo date('Y') ?> by Zend Technologies Ltd. <?php echo $this->translate('All rights reserved.') ?></p>
+        	     <p>&copy; 2005 - <?php echo date('Y') ?>. <?php echo $this->translate('All rights reserved.') ?></p>
         	</footer>
     	    	
         </div> <!-- /container -->
