--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -40,8 +40,8 @@
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
                         <!--li class="active"><a href="<?php echo $this->url('home') ?>"><?php echo $this->translate('Home') ?></a></li-->                        
-                        <li class="active"><a href="<?php echo $this->url('album') ?>"><?php echo $this->translate('Конграгенты') ?></a></li>
-                        <li class="active"><a href="<?php echo $this->url('album') ?>"><?php echo $this->translate('Закупки') ?></a></li>
+                        <li class="active"><a href="<?php echo $this->url('partner') ?>"><?php echo $this->translate('Конграгенты') ?></a></li>
+                        <li class="active"><a href="<?php echo $this->url('purchase') ?>"><?php echo $this->translate('Закупки') ?></a></li>
                         <li class="active"><a href="<?php echo $this->url('album') ?>"><?php echo $this->translate('БДДС') ?></a></li>
                         <li class="active"><a href="<?php echo $this->url('album') ?>"><?php echo $this->translate('ТМЦ') ?></a></li>
                         <li class="active"><a href="<?php echo $this->url('album') ?>"><?php echo $this->translate('Документы в работе') ?></a></li>
