--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -42,7 +42,7 @@
                         <!--li class="active"><a href="<?php echo $this->url('home') ?>"><?php echo $this->translate('Home') ?></a></li-->                        
                         <li class="active"><a href="<?php echo $this->url('partner') ?>"><?php echo $this->translate('Конграгенты') ?></a></li>
                         <li class="active"><a href="<?php echo $this->url('purchase') ?>"><?php echo $this->translate('Закупки') ?></a></li>
-                        <li class="active"><a href="<?php echo $this->url('album') ?>"><?php echo $this->translate('БДДС') ?></a></li>
+                        <li class="active"><a href="<?php echo $this->url('budget') ?>"><?php echo $this->translate('БДДС') ?></a></li>
                         <li class="active"><a href="<?php echo $this->url('album') ?>"><?php echo $this->translate('ТМЦ') ?></a></li>
                         <li class="active"><a href="<?php echo $this->url('album') ?>"><?php echo $this->translate('Документы в работе') ?></a></li>
                         <li class="active"><a href="<?php echo $this->url('album') ?>"><?php echo $this->translate('Программное обеспечение') ?></a></li>
