добавил модуль Admin, Doc, Software; удалил файл index.phtml в report; убрал модуль Иudget в application.config.php

--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -43,11 +43,11 @@
                         <li class="active"><a href="<?php echo $this->url('partner') ?>"><?php echo $this->translate('Конграгенты') ?></a></li>
                         <li class="active"><a href="<?php echo $this->url('purchase') ?>"><?php echo $this->translate('Закупки') ?></a></li>
                         <li class="active"><a href="<?php echo $this->url('budget') ?>"><?php echo $this->translate('БДДС') ?></a></li>
-                        <li class="active"><a href="<?php echo $this->url('album') ?>"><?php echo $this->translate('ТМЦ') ?></a></li>
-                        <li class="active"><a href="<?php echo $this->url('album') ?>"><?php echo $this->translate('Документы в работе') ?></a></li>
-                        <li class="active"><a href="<?php echo $this->url('album') ?>"><?php echo $this->translate('Программное обеспечение') ?></a></li>
+                        <li class="active"><a href="<?php echo $this->url('tmc') ?>"><?php echo $this->translate('ТМЦ') ?></a></li>
+                        <li class="active"><a href="<?php echo $this->url('doc') ?>"><?php echo $this->translate('Документы в работе') ?></a></li>
+                        <li class="active"><a href="<?php echo $this->url('software') ?>"><?php echo $this->translate('Программное обеспечение') ?></a></li>
                         <li class="active"><a href="<?php echo $this->url('reports') ?>"><?php echo $this->translate('Отчеты') ?></a></li>
-                        <li class="active"><a href="<?php echo $this->url('reports') ?>"><?php echo $this->translate('Администрирование') ?></a></li>
+                        <li class="active"><a href="<?php echo $this->url('admin') ?>"><?php echo $this->translate('Администрирование') ?></a></li>
                         
                         
                     </ul>
