добавил в модули autoload_classmap.php; восстановил и переименовал модуль Reports в Report, добавил его в application.config.php ;удалил файл autoad_classmap.php из корня

--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -46,7 +46,7 @@
                         <li class="active"><a href="<?php echo $this->url('tmc') ?>"><?php echo $this->translate('ТМЦ') ?></a></li>
                         <li class="active"><a href="<?php echo $this->url('doc') ?>"><?php echo $this->translate('Документы в работе') ?></a></li>
                         <li class="active"><a href="<?php echo $this->url('software') ?>"><?php echo $this->translate('Программное обеспечение') ?></a></li>
-                        <li class="active"><a href="<?php echo $this->url('reports') ?>"><?php echo $this->translate('Отчеты') ?></a></li>
+                        <li class="active"><a href="<?php echo $this->url('report') ?>"><?php echo $this->translate('Отчеты') ?></a></li>
                         <li class="active"><a href="<?php echo $this->url('admin') ?>"><?php echo $this->translate('Администрирование') ?></a></li>
                         
                         
