--- a/module/Report/view/report/report/index.phtml
+++ b/module/Report/view/report/report/index.phtml
@@ -3,7 +3,7 @@ Action "index", controller "Reports", module "Reports".
 <?php
  // module/Album/view/album/album/index.phtml:
  
-  $title = 'My albums';
+  $title = 'Мои отчеты';
    $this->headTitle($title);
     ?>
      <h1><?php echo $this->escapeHtml($title); ?></h1>
