добавил в layout в меню ссылку на Album, исправил в gitignore исключение лог файла

--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -48,7 +48,7 @@
                         <li class="active"><a href="<?php echo $this->url('software') ?>"><?php echo $this->translate('Программное обеспечение') ?></a></li>
                         <li class="active"><a href="<?php echo $this->url('report') ?>"><?php echo $this->translate('Отчеты') ?></a></li>
                         <li class="active"><a href="<?php echo $this->url('admin') ?>"><?php echo $this->translate('Администрирование') ?></a></li>
-                        
+                        <li class="active"><a href="<?php echo $this->url('album') ?>"><?php echo $this->translate('Альбом') ?></a></li>                        
                         
                     </ul>
                 </div><!--/.nav-collapse -->
