--- a/module/Album/view/album/album/delete.phtml
+++ b/module/Album/view/album/album/delete.phtml
@@ -1,3 +1,25 @@
-Module: Album
-Controller: Album
-Action: delete
+<?php
+ // module/Album/view/album/album/delete.phtml:
+
+ $title = 'Delete album';
+ $this->headTitle($title);
+ ?>
+ <h1><?php echo $this->escapeHtml($title); ?></h1>
+
+ <p>Are you sure that you want to delete
+     '<?php echo $this->escapeHtml($album->title); ?>' by
+     '<?php echo $this->escapeHtml($album->artist); ?>'?
+ </p>
+ <?php
+ $url = $this->url('album', array(
+     'action' => 'delete',
+     'id'     => $this->id,
+ ));
+ ?>
+ <form action="<?php echo $url; ?>" method="post">
+ <div class ="form-group">
+     <input type="hidden" name="id" value="<?php echo (int) $album->id; ?>" />
+     <input class="btn btn-default" type="submit" name="del" value="Yes" />
+     <input class="btn btn-default" type="submit" name="del" value="No" />
+ </div>
+ </form>
