изменил стиль таблицы альбомы

--- a/module/Album/view/album/album/index.phtml
+++ b/module/Album/view/album/album/index.phtml
@@ -9,7 +9,7 @@
      <a href="<?php echo $this->url('album', array('action'=>'add'));?>">Add new album</a>
  </p>
 
- <table class="table">
+ <table class="table table-bordered table-hover table-striped">
  <tr>
      <th>Title</th>
      <th>Artist</th>
