добавил в шаблон отображение модуля Blog в меню

--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -49,6 +49,8 @@
                         <li class="active"><a href="<?php echo $this->url('report') ?>"><?php echo $this->translate('Отчеты') ?></a></li>
                         <li class="active"><a href="<?php echo $this->url('admin') ?>"><?php echo $this->translate('Администрирование') ?></a></li>
                         <li class="active"><a href="<?php echo $this->url('album') ?>"><?php echo $this->translate('Альбом') ?></a></li>                        
+                        <li class="active"><a href="<?php echo $this->url('post') ?>"><?php echo $this->translate('Блоги') ?></a></li>
+                        
                         
                     </ul>
                 </div><!--/.nav-collapse -->
