добавил модуль PhoneBook

--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -41,6 +41,7 @@
                     <ul class="nav navbar-nav">
                         <!--li class="active"><a href="<?php echo $this->url('home') ?>"><?php echo $this->translate('Home') ?></a></li-->                        
                         <li class="active"><a href="<?php echo $this->url('partner') ?>"><?php echo $this->translate('Конграгенты') ?></a></li>
+                        <li class="active"><a href="<?php echo $this->url('phone') ?>"><?php echo $this->translate('Телефоны') ?></a></li>
                         <li class="active"><a href="<?php echo $this->url('purchase') ?>"><?php echo $this->translate('Закупки') ?></a></li>
                         <li class="active"><a href="<?php echo $this->url('budget') ?>"><?php echo $this->translate('БДДС') ?></a></li>
                         <li class="active"><a href="<?php echo $this->url('tmc') ?>"><?php echo $this->translate('ТМЦ') ?></a></li>
