добавил редактирование и удаление блогов

--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -44,7 +44,7 @@
                         <li class="active"><a href="<?php echo $this->url('phone') ?>"><?php echo $this->translate('Телефоны') ?></a></li>
                         <li class="active"><a href="<?php echo $this->url('purchase') ?>"><?php echo $this->translate('Закупки') ?></a></li>
                         <li class="active"><a href="<?php echo $this->url('budget') ?>"><?php echo $this->translate('БДДС') ?></a></li>
-                        <li class="active"><a href="<?php echo $this->url('tmc') ?>"><?php echo $this->translate('ТМЦ') ?></a></li>
+                        <!--li class="active"><a href="<?php echo $this->url('tmc') ?>"><?php echo $this->translate('ТМЦ') ?></a></li-->
                         <li class="active"><a href="<?php echo $this->url('doc') ?>"><?php echo $this->translate('Документы в работе') ?></a></li>
                         <li class="active"><a href="<?php echo $this->url('software') ?>"><?php echo $this->translate('Программное обеспечение') ?></a></li>
                         <li class="active"><a href="<?php echo $this->url('report') ?>"><?php echo $this->translate('Отчеты') ?></a></li>
