в модуль Album добавлен breadcrumb

--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -38,13 +38,9 @@
                     <!--a class="navbar-brand" href="<?php echo $this->url('home') ?>"><img src="<?php echo $this->basePath('img/zf2-logo.png') ?>" alt="Zend Framework 2"/>&nbsp;<?php echo $this->translate('Skeleton Application') ?></a-->
                 </div>
                 <div class="collapse navbar-collapse">
-		    <?php // <-- Update this !!
-		    echo $this->navigation('navigation')
-	        	        ->menu()
-				->setMinDepth(0)
-                                ->setMaxDepth(0)
-                                ->setUlClass('nav navbar-nav');
-                    ?>
+                    <?php echo $this->navigation('navigation')->breadcrumbs()->setMinDepth(0); ?>
+                                    
+                    
                         <!--ul class="nav navbar-nav"-->
                         <!--li class="active"><a href="<?php echo $this->url('home') ?>"><?php echo $this->translate('Home') ?></a></li-->                        
                         <!--li class="active"><a href="<?php echo $this->url('partner') ?>"><?php echo $this->translate('Конграгенты') ?></a></li-->
@@ -65,6 +61,13 @@
             </div>
         </nav>
         <div class="container">
+    	    <?php
+    	        echo $this->navigation('navigation') // <-- Update this!!
+    	                      ->breadcrumbs()
+	                      ->setMinDepth(0)
+                              ->setPartial('partial/breadcrumb.phtml');
+              ?>
+    	                                                          
     	    <?php echo $this->content; ?>
         	<hr>
         	<footer>
