--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -38,26 +38,41 @@
                     <!--a class="navbar-brand" href="<?php echo $this->url('home') ?>"><img src="<?php echo $this->basePath('img/zf2-logo.png') ?>" alt="Zend Framework 2"/>&nbsp;<?php echo $this->translate('Skeleton Application') ?></a-->
                 </div>
                 <div class="collapse navbar-collapse">
-                    <ul class="nav navbar-nav">
+		    <?php // <-- Add this !!
+			echo $this->navigation('navigation')
+			            ->menu()
+            	    	            ->setMinDepth(0)
+                                    ->setMaxDepth(0)
+                                    ->setUlClass('nav navbar-nav');
+            	    ?>
+
+                    <!--ul class="nav navbar-nav">
                         <!--li class="active"><a href="<?php echo $this->url('home') ?>"><?php echo $this->translate('Home') ?></a></li-->                        
-                        <li class="active"><a href="<?php echo $this->url('partner') ?>"><?php echo $this->translate('Конграгенты') ?></a></li>
-                        <li class="active"><a href="<?php echo $this->url('phone') ?>"><?php echo $this->translate('Телефоны') ?></a></li>
-                        <li class="active"><a href="<?php echo $this->url('purchase') ?>"><?php echo $this->translate('Закупки') ?></a></li>
-                        <li class="active"><a href="<?php echo $this->url('budget') ?>"><?php echo $this->translate('БДДС') ?></a></li>
+                        <!--li class="active"><a href="<?php echo $this->url('partner') ?>"><?php echo $this->translate('Конграгенты') ?></a></li-->
+                        <!--li class="active"><a href="<?php echo $this->url('phone') ?>"><?php echo $this->translate('Телефоны') ?></a></li-->
+                        <!--li class="active"><a href="<?php echo $this->url('purchase') ?>"><?php echo $this->translate('Закупки') ?></a></li->
+                        <!--li class="active"><a href="<?php echo $this->url('budget') ?>"><?php echo $this->translate('БДДС') ?></a></li-->
                         <!--li class="active"><a href="<?php echo $this->url('tmc') ?>"><?php echo $this->translate('ТМЦ') ?></a></li-->
-                        <li class="active"><a href="<?php echo $this->url('doc') ?>"><?php echo $this->translate('Документы в работе') ?></a></li>
-                        <li class="active"><a href="<?php echo $this->url('software') ?>"><?php echo $this->translate('Программное обеспечение') ?></a></li>
-                        <li class="active"><a href="<?php echo $this->url('report') ?>"><?php echo $this->translate('Отчеты') ?></a></li>
-                        <li class="active"><a href="<?php echo $this->url('admin') ?>"><?php echo $this->translate('Администрирование') ?></a></li>
-                        <li class="active"><a href="<?php echo $this->url('album') ?>"><?php echo $this->translate('Альбом') ?></a></li>                        
-                        <li class="active"><a href="<?php echo $this->url('post') ?>"><?php echo $this->translate('Блоги') ?></a></li>
+                        <!--li class="active"><a href="<?php echo $this->url('doc') ?>"><?php echo $this->translate('Документы в работе') ?></a></li-->
+                        <!--li class="active"><a href="<?php echo $this->url('software') ?>"><?php echo $this->translate('Программное обеспечение') ?></a></li-->
+                        <!--li class="active"><a href="<?php echo $this->url('report') ?>"><?php echo $this->translate('Отчеты') ?></a></li-->
+                        <!--li class="active"><a href="<?php echo $this->url('admin') ?>"><?php echo $this->translate('Администрирование') ?></a></li-->
+                        <!--li class="active"><a href="<?php echo $this->url('album') ?>"><?php echo $this->translate('Альбом') ?></a></li-->                        
+                        <!--li class="active"><a href="<?php echo $this->url('post') ?>"><?php echo $this->translate('Блоги') ?></a></li-->
                         
                         
-                    </ul>
+                    </ul-->
                 </div><!--/.nav-collapse -->
             </div>
         </nav>
         <div class="container">
+    	    <?php
+    	        echo $this->navigation('navigation') // <-- Update this!!
+    	                      ->breadcrumbs()
+    	                      ->setMinDepth(0)
+    	                      ->setPartial('partial/breadcrumb.phtml');
+    	    ?>
+    	                                                      
     	    <?php echo $this->content; ?>
         	<hr>
         	<footer>
