--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -26,7 +26,19 @@
         ; ?>
 
     </head>
-    <div class="col-lg-1"> <?php echo $this->zfcUserLoginWidget(); ?> </div>
+    <div class="col-sm-6 col-lg-1"> 
+    <?php //echo $this->zfcUserLoginWidget(); ?>
+    
+    <!-- Test if the User is connected -->
+    <?php if(!$this->zfcUserIdentity()): ?>
+        <!-- display the login form -->
+            <?php else: ?>
+                <!-- display the 'display name' of the user -->
+                    Пользователь: <?php echo $this->zfcUserIdentity()->getDisplayname(); ?>
+                    <a href="<?php echo $this->url('zfcuser/logout') ?>">[<?php echo $this->translate('Sign Out'); ?>]</a>
+                    <?php endif?>
+    
+     </div>
     <body>
     
         <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
