сделал скрытыми некторые ссылки на  добавление, удаление в зависимости от роли пользователя~

--- a/module/Album/view/album/album/index.phtml
+++ b/module/Album/view/album/album/index.phtml
@@ -5,9 +5,11 @@
  $this->headTitle($title);
  ?>
  <h1><?php echo $this->escapeHtml($title); ?></h1>
+<?php if ($this->isAllowed('controller/Album\Controller\Album:add', 'admin')) { ?>
  <p>
      <a href="<?php echo $this->url('album', array('action'=>'add'));?>">Add new album</a>
  </p>
+<?php } ?>
 
  <table class="table table-bordered table-hover table-striped">
  <tr>
@@ -19,12 +21,14 @@
  <tr>
      <td><?php echo $this->escapeHtml($album->title);?></td>
      <td><?php echo $this->escapeHtml($album->artist);?></td>
-     <td>
+    <?php if ($this->isAllowed('controller/Album\Controller\Album:add', 'admin')) { ?> 
+    <td>
          <a href="<?php echo $this->url('album',
              array('action'=>'edit', 'id' => $album->id));?>">Edit</a>
          <a href="<?php echo $this->url('album',
              array('action'=>'delete', 'id' => $album->id));?>">Delete</a>
      </td>
+     <?php } ?>
  </tr>
  <?php endforeach; ?>
  </table>
