--- a/module/PhoneBook/view/phone-book/list/index.phtml
+++ b/module/PhoneBook/view/phone-book/list/index.phtml
@@ -1,37 +1,42 @@
-<?php
-
- $title = 'Телефонный справочник';
- $this->headTitle($title);
- ?>
- <h1><?php echo $this->escapeHtml($title); ?></h1>
- <?php if ($this->isAllowed('controller/Blog\Controller\Write:add', 'admin')) { ?>
- <p>
-     <a href="<?php echo $this->url('phone', array('action'=>'add'));?>">Добавить новую запись</a>
- </p>
-<?php } ?>
-
- <table class="table table-bordered table-hover table-striped">
- <tr>
-     <th>Должность</th>
-     <th>ФИО</th>
-     <th>Должность</th>
-     <th>Офис</th>
-     <th>Тел. внутр</th>
-     <th>Тел. городской</th>
-     <th>Сотовый</th>
-     <th>E-mail</th>
-     <th>&nbsp;</th>
- </tr>
- <?php foreach ($albums as $album) : ?>
- <tr>
-     <td><?php echo $this->escapeHtml($album->title);?></td>
-     <td><?php echo $this->escapeHtml($album->artist);?></td>
-     <td>
-         <a href="<?php echo $this->url('phone',
-             array('action'=>'edit', 'id' => $phone->id));?>">Edit</a>
-         <a href="<?php echo $this->url('phone',
-             array('action'=>'delete', 'id' => $phone->id));?>">Delete</a>
-     </td>
- </tr>
- <?php endforeach; ?>
- </table>
+<div class="row">
+    <div class="col-md-12">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title">Телефонный справочник</h3>
+            </div>
+            <div class="panel-body">
+                <?php if ($this->isAllowed('controller/Blog\Controller\Write:add', 'admin')) { ?>
+            	    <a href="<?php echo $this->url('phone', array('action'=>'add'));?>">Add Contact</a>
+		<?php }  ?>
+                
+                <?php if (isset($phones)):?>
+                <table class="table">
+                    <thead>
+                    <tr>
+                        <th>Id</th>
+                        <th>Full name</th>
+                        <th>email</th>
+                        <th></th>
+                    </tr>
+                    </thead>
+                
+                <?php foreach($phones as $phone): ?>
+                    <tbody>
+                    <tr>
+                        <td><?php echo $phone->getId(); ?></td>
+                        <td><?php echo $phone->getFullName(); ?></td>
+                        <td><?php echo $phone->getemail(); ?></td>
+                        <td>
+                            <a href="<?php echo $this->url('phone', 
+                            array('action'=>'edit', 'id' => $phone->getId()));?>">Edit</a> 
+                            <a href="<?php echo $this->url('phone', array('action'=>'delete', 'id' => $phone->getId()));?>">Delete</a>
+                        </td>
+                    </tr>
+                    </tbody>
+                <?php endforeach; ?>
+                </table>
+                <?php endif; ?>
+            </div>
+        </div>
+    </div>
+</div>
