--- a/module/PhoneBook/view/phone-book/list/delete.phtml
+++ b/module/PhoneBook/view/phone-book/list/delete.phtml
@@ -4,8 +4,9 @@ $title = 'Delete User';
 $this->headTitle($title);
 ?>
 <h1><?php echo $this->escapeHtml($title); ?></h1>
-Are you sure you want to delete user <?php echo $phone->getFullname(); ?>? <br/>
+<?php echo $this->translate('Are you sure you want to delete user'); ?> <?php echo $phone->getFullname(); ?>? <br/>
 <form method="post">
-  <input type="submit" value="Delete">
+  <input class = "btn btn-danger" type="submit" value="Delete">
 </form>
+
 
