в Blog убрал inputfilter и все заработало

--- a/module/Blog/view/blog/category/add.phtml
+++ b/module/Blog/view/blog/category/add.phtml
@@ -8,4 +8,4 @@ $this->headTitle($title);
 	$form->setAttribute('action', $this->url('category',array('action' => 'add')));
 	$form->setAttribute('class', 'form-horizontal');
 	
-	echo $this->Form($this->form);
+	echo $this->ztbForm($this->form);
