--- a/module/Blog/view/blog/category/edit.phtml
+++ b/module/Blog/view/blog/category/edit.phtml
@@ -8,5 +8,5 @@ $this->headTitle($title);
 	$form->setAttribute('action', $this->url('category', array('action' => 'edit', 'id' => $category->getId())));
 	$form->setAttribute('class', 'form-horizontal');
 	
-	echo $this->Form($form);
+	echo $this->ztbForm($form);
 ?>
