--- a/module/Blog/view/blog/post/index.phtml
+++ b/module/Blog/view/blog/post/index.phtml
@@ -20,7 +20,7 @@ echo $this->ztbImage()->circle('/img/zf2-logo.png'); ?>
 	    <tr>
 	        <td><?php echo $this->escapeHtml($post->gettitle());?></td>
 	        <td><?php echo $this->escapeHtml($post->getContent());?></td>
-	        <td><?php echo $this->escapeHtml($post->getCreatedDate());?></td>
+	        <td><?php echo $this->escapeHtml($post->getcreatedDate()->format('Y-m-d H:i'));?></td>
 
 	        <td>
 	            <a href="<?php echo $this->url('post', array('action' => 'edit', 'id' => $post->getId())); ?>">Edit</a>
