--- a/module/Blog/view/blog/post/add.phtml
+++ b/module/Blog/view/blog/post/add.phtml
@@ -10,13 +10,13 @@ $this->headTitle($title);
 	$form->setAttribute('class', 'form-horizontal');
 	$this->headScript()->appendFile("/js/tiny_mce/tiny_mce.js");
 	echo $this->ztbForm($this->form);
-
+	
 ?>
 
-<script type="text/javascript" src="/js/tiny_mce/tiny_mce.js"></script>
 <script type="text/javascript">
 tinyMCE.init({
-mode : "textareas",
-theme : "advanced"
+    mode: "textareas",
+    theme: "advanced",
 });
 </script>
+
