--- a/module/Blog/view/blog/post/index.phtml
+++ b/module/Blog/view/blog/post/index.phtml
@@ -17,7 +17,7 @@ echo $this->ztbImage()->polaroid('/img/zf2-logo.png'); ?>
 	    <?php if (isset($posts)):?>
 	    <div class="panel-body">
 	    	<?php if ($this->isAllowed('controller/blog/post:add', 'admin')) { ?>
-	        	    <a href="<?php echo $this->url('post', array('action'=>'add'));?>"><?php echo $this->translate('Add Contact'); ?></a>
+	        	    <a href="<?php echo $this->url('post', array('action'=>'add'));?>"><?php echo $this->translate('Add Contact'); ?><img alt="Delete" src="/img/gliphicons_free/gliphicons/glyphicons-7-user-add.png"/></a>
 	        <?php }  ?>
 	            		    
     <table class="table">
@@ -38,7 +38,7 @@ echo $this->ztbImage()->polaroid('/img/zf2-logo.png'); ?>
 	<?php foreach($posts as $post) : ?>
 	    <tr>
 		<td> </td>
-	        <td><?php echo $this->escapeHtml($post->gettitle());?></td>
+	        <td><a href="<?php echo $this->url('post', array('action' => 'detail', 'id' =>  $post->getid())) ?>"><?php echo $this->escapeHtml($post->gettitle());?></a></td>
 	        <td><?php echo $this->escapeHtml($post->getContent());?></td>
 	        <td><?php echo $this->escapeHtml($post->getcreatedDate()->format('Y-m-d H:i'));?></td>
 		<td> </td>
@@ -46,8 +46,10 @@ echo $this->ztbImage()->polaroid('/img/zf2-logo.png'); ?>
 		<td> </td>
 		<td> </td>
 	        <td>
+	            <?php if ($this->isAllowed('controller/blog/post:add', 'admin')) { ?>
 	            <a href="<?php echo $this->url('post', array('action' => 'edit', 'id' => $post->getId())); ?>">Edit</a>
-	            <a href="<?php echo $this->url('post', array('action' => 'delete', 'id' => $post->getId())); ?>" onclick="return confirm('Are you sure?')"><img alt="Delete" src="/img/delete.png"/></a>
+	            <a href="<?php echo $this->url('post', array('action' => 'delete', 'id' => $post->getId())); ?>" onclick="return confirm('Are you sure?')"><img alt="Delete" src="/img/gliphicons_free/gliphicons/glyphicons-17-bin.png"/></a>
+	            <?php } ?>
 	        </td>
 	    </tr>
 	<?php endforeach; ?>
