удалил в блоге иконку над таблицей и textarea при добавлении записи

--- a/module/Blog/view/blog/post/index.phtml
+++ b/module/Blog/view/blog/post/index.phtml
@@ -5,7 +5,7 @@ $this->headTitle($title);
 
 <?php // explicit usage
 // explicit types: circle, rounded, polaroid
-echo $this->ztbImage()->polaroid('/img/zf2-logo.png'); ?>
+//echo $this->ztbImage()->polaroid('/img/zf2-logo.png'); ?>
 
 <div class="row">
     <div class="col-md-12">
